link config json deploy and read

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,6 @@ file(GLOB SOURCES "src/*")
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 
 # Libraries
-target_link_libraries(${PROJECT_NAME} PUBLIC kjarni Qt5::Core)
+target_link_libraries(${PROJECT_NAME} PUBLIC kjarni Qt5::Core loodsman)
+
+copy_post_cmake("link_config.json" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
