Working hearbeat receive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Project
 project(Jerom-The-Mavlink)
 
+# Mavlink 3rdparty
+add_subdirectory(3rdparty)
+
 # Find Qt libraries
 find_package(Qt5 ${QT_REQUIRED_VERSION} COMPONENTS Core REQUIRED)
 
@@ -18,6 +21,6 @@ file(GLOB SOURCES "src/*")
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 
 # Libraries
-target_link_libraries(${PROJECT_NAME} PUBLIC kjarni Qt5::Core loodsman)
+target_link_libraries(${PROJECT_NAME} PUBLIC kjarni Qt5::Core loodsman mavlink)
 
 copy_post_cmake("link_config.json" ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
