fixed mavlink path

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -8,10 +8,10 @@ set(MAVLINK_V2 TRUE)
 
 # MAVLink version
 if (MAVLINK_V2)
-    set(MAVLINK_DIR "c_library_v2")
+    set(MAVLINK_DIR "libmavlinkcpp_v2")
     message(MAVLINK_V2)
 else (MAVLINK_V2)
-    set(MAVLINK_DIR "c_library_v1")
+    set(MAVLINK_DIR "libmavlinkcpp_v1")
     message(MAVLINK_V2)
 endif (MAVLINK_V2)
 
